(feat) switch from openjdk8 to openjdk11 jre in Dockerfile