@@ -1,4 +1,5 @@
-FROM gcr.io/distroless/java@sha256:84740ded6cbeebaa89c9b19aed3754d464586592b561e5494be4192ac0b3a8f5
+# package app with openjdk jre (see https://hub.docker.com/_/openjdk/)
+FROM openjdk:11.0.1-jre-slim-sid
 VOLUME /tmp
 COPY target/manon.jar app.jar
-ENTRYPOINT ["java","-Dfile.encoding=UTF-8","-Djava.awt.headless=true","-XX:+UnlockExperimentalVMOptions","-XX:+UseCGroupMemoryLimitForHeap","-Dserver.port=8080","-Dspring.jmx.enabled=false","-Dspring.profiles.active=docker,metrics","-jar","/app.jar"]
+ENTRYPOINT ["java","-Dfile.encoding=UTF-8","-Djava.awt.headless=true","-Dserver.port=8080","-Dspring.profiles.active=docker,metrics","-jar","/app.jar"]
